Fixed image alignment

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,26 @@
+.hero-image {
+  /* The image used */
+  background-image: url('./../images/home/straffonstaff.jpg');
+
+  /* Set a specific height */
+  height: 60%;
+
+  /* Position and center the image to scale nicely on all screens */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
 body, html {
     height: 100%;
     margin: 0;
@@ -11,6 +34,11 @@ img#family-photo {
 img#straffon-client {
   height: 240px;
   box-shadow: 6px 6px 3px #888888;
+}
+@media only screen and (max-width: 767px) {
+  .hero-image {
+    height: 50%;
+  }
 }
 
 @media only screen and (max-width: 991px) {
@@ -36,27 +64,4 @@ img#straffon-client {
 	0% { opacity: 1; }
 	50% { opacity: .1; }
 	100% { opacity: 1; }
-}
-.hero-image {
-    /* The image used */
-    background-image: url('./../images/home/straffonstaff.jpg');
-
-    /* Set a specific height */
-    height: 60%;
-
-    /* Position and center the image to scale nicely on all screens */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-}
-
-/* Place text in the middle of the image */
-.hero-text {
-    text-align: center;
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
 }
